adding blog link

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
         <div class="contact-text-content">
           <p>I’m looking for any opportunities, my inbox is always open. Whether you have a question or just want to hire me, feel free to reach out to me!</p>
         </div>
-                <div id="social-list">
+        <div id="social-list">
         <div class="social-circle social-
         logos"><a id="white" href="https://www.linkedin.com/in/praveenraj002/"><i class="fa-brands fa-linkedin-in fa-2x linkedin"></i></a></i></div>
         <!-- Twitter -->
@@ -247,6 +247,10 @@
         <!-- Email -->
          <div class="social-circle social-
         logos"><a id="white" href="reachpraveenrajsl@gmail.com"><i class="fa-solid fa-envelope fa-2x github "></i></a></div>
+        </div>
+        <!-- Blog -->
+         <div class="social-circle social-
+        logos"><a id="white" href="https://praveenrajsl.hashnode.dev/"><i class="fa-brands fa-hashnode"></i></a></div>
         </div>
       </section>
     </main>
