Rearranging social icons

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
         logos"><a id="white" href="reachpraveenrajsl@gmail.com"><i class="fa-solid fa-envelope fa-2x github "></i></a></div>
         <!-- Blog -->
          <div class="social-circle social-
-        logos"><a id="white" href="https://praveenrajsl.hashnode.dev/"><i class="fa-brands fa-hashnode"></i></a></div>
+        logos"><a id="white" href="https://praveenrajsl.hashnode.dev/"><i class="fa-brands fa-hashnode fa-2x "></i></a></div>
         </div>
         </div>
       </section>
