Added Space X Clone Project

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           <div class="card-contents">
             <h3>Mapty</h3>
             <p>Enables users to log their workouts by saving the type of workout, distance & duration by selecting
-            the precise spot where they want to work out in the map.</p>
+            the precise spot. Guided by <span class="blue">Jonas schmedtmann.</span></p>
             <p class="card-techs">
               Html ~ CSS ~ JavaScript 
             </p>
@@ -159,6 +159,25 @@
             <p>A single Device Multiplayer Game which enables users to roll dice and hold their scores.</p>
             <p class="card-techs">
               Html ~ CSS ~ JavaScript
+            </p>
+          </div>
+        </div>
+
+                  <div class="card">
+          <div class="card-navbar">
+            <div class="folder"><i class="fa-regular fa-folder fa-2xl"></i></div>
+            <div class="nav-links">
+              <a href="https://spacex-clone-pr.netlify.app/"><i class="fa-solid fa-arrow-up-right-from-square fa-2xl"></i></a>
+              <a href="https://github.com/Praveenraj002/SpaceX-clone"><i class="fa-brands fa-github fa-2xl"></i></a>
+            </div>
+          </div>
+          <div class="card-contents">
+            <h3>SpaceX Clone</h3>
+            <p>Recreated SpaceX website including the Homepage, menu and some inner pages, also created some animations using keyframes.
+              Guided by <span class="blue">Brad traversy</span>
+            </p>
+            <p class="card-techs">
+              Html ~ CSS ~ JavaScript  
             </p>
           </div>
         </div>
@@ -202,6 +221,7 @@
 
 
           <!-- Card - 6 -->
+
       </div>
       </section>
     </main>
