--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
         <div class="circle tech_logos"><i class="fa-brands fa-html5 fa-2x"></i></div>
         <!-- CSS -->
         <div class="circle tech_logos"><i class="fa-brands fa-css3-alt fa-2x"></i></div>
+        <!-- Sass -->
+        <div class="circle tech_logos"><i class="fa-brands fa-sass fa-2x"></i></div>
         <!-- JS -->
         <div class="circle tech_logos"><i class="fa-brands fa-js fa-2x"></i></div>
         <!-- Bootstrap -->
