--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
           <div class="nav-img">
             <img src="./Images/nav-icon.png" alt="navbar icon" />
           </div>
-            <ul class="nav-list">
+            <!-- <ul class="nav-list">
               <li><a class="nav-item" href="#home">Home</a></li>
               <li><a class="nav-item" href="#about">About</a></li>
               <li><a class="nav-item" href="#projects">Projects</a></li>
               <li><a class="nav-item" href="#contact">Contact</a></li>
-            </ul>
+            </ul> -->
           </div>
         </div>
       </div>
     </nav>
-    <!-- Hero section -->
+    <!-- Hero section
     <main>
       <section class="container">
         <div class="focus" id="home"></div>
@@ -59,7 +59,7 @@
         </div>
       </section>
     </main>
-    <!-- About section -->
+    About section
     <main>
       <section class="container">
         <div class="focus" id="about"></div>
@@ -77,31 +77,31 @@
           </div>
       </section>
     </main>
-    <!-- Tech Stack -->
+    Tech Stack
     <main>
       <section class="container">
         <div class="title">
           <p>Technologies I’ve been working with recently</p>
         </div>
         <div id="tech_list">
-        <!-- Html -->
+        Html
         <div class="circle tech_logos"><i class="fa-brands fa-html5 fa-2x"></i></div>
-        <!-- CSS -->
+        CSS
         <div class="circle tech_logos"><i class="fa-brands fa-css3-alt fa-2x"></i></div>
-        <!-- Sass -->
+        Sass
         <div class="circle tech_logos"><i class="fa-brands fa-sass fa-2x"></i></div>
-        <!-- JS -->
+        JS
         <div class="circle tech_logos"><i class="fa-brands fa-js fa-2x"></i></div>
-        <!-- Bootstrap -->
+        Bootstrap
         <div class="circle tech_logos"><i class="fa-brands fa-bootstrap fa-2x"></i></div>
-        <!-- Git -->
+        Git
         <div class="circle tech_logos"><i class="fa-brands fa-git-alt fa-2x"></i></div>
-        <!-- C -->
+        C
         <div class="circle tech_logos"><i class="fa-solid fa-c fa-2x"></i></div>
       </div>
       </section>
     </main>
-    <!-- Projects -->
+    Projects
     <main>
       <section class="container">
         <div class="focus" id="projects"></div>
@@ -111,7 +111,7 @@
         </div>
               <div class="project-cards">
 
-               <!-- Card - 2 -->
+               Card - 2
         <div class="card">
           <div class="card-navbar">
             <div class="folder"><i class="fa-regular fa-folder fa-2xl"></i></div>
@@ -129,7 +129,7 @@
           </div>
         </div>
 
-            <!-- Card - 3 -->
+            Card - 3
         <div class="card">
           <div class="card-navbar">
             <div class="folder"><i class="fa-regular fa-folder fa-2xl"></i></div>
@@ -167,7 +167,7 @@
         </div>
 
         
-            <!-- Card - 4 -->
+            Card - 4
         <div class="card">
           <div class="card-navbar">
             <div class="folder"><i class="fa-regular fa-folder fa-2xl"></i></div>
@@ -185,7 +185,7 @@
           </div>
         </div>
       
-          <!-- Card - 5 -->
+          Card - 5
                   <div class="card">
           <div class="card-navbar">
             <div class="folder"><i class="fa-regular fa-folder fa-2xl"></i></div>
@@ -204,12 +204,12 @@
         </div>
 
 
-          <!-- Card - 6 -->
+          Card - 6
 
       </div>
       </section>
     </main>
-    <!-- Instagram Page -->
+    Instagram Page
     <main>
       <div class="insta-bg">
         <section class="container">
@@ -225,7 +225,7 @@
         </section>
       </div>
     </main>
-    <!-- Contact -->
+    Contact
     <main>
       <section class="container">
         <div class="focus" id="contact"></div>
@@ -239,33 +239,40 @@
         <div id="social-list">
         <div class="social-circle social-
         logos"><a id="white" href="https://www.linkedin.com/in/praveenraj002/"><i class="fa-brands fa-linkedin-in fa-2x linkedin"></i></a></i></div>
-        <!-- Twitter -->
+        Twitter
         <div class="social-circle social-
         logos"><a id="white" href="https://twitter.com/PraveenRajSLdev"><i class="fa-brands fa-twitter fa-2x twitter"></i></a></div>
-        <!-- Instagram -->
+        Instagram
         <div class="social-circle social-
         logos"><a id="white" href="https://www.instagram.com/praveenraj_dev/"><i class="fa-brands fa-instagram fa-2x  instagram"></i></a></div>
-        <!-- Git Hub -->
+        Git Hub
         <div class="social-circle social-
         logos"><a id="white" href="https://github.com/"><i class="fa-brands fa-github fa-2x github "></i></a></div>
-        <!-- Email -->
+        Email
          <div class="social-circle social-
         logos"><a id="white" href="reachpraveenrajsl@gmail.com"><i class="fa-solid fa-envelope fa-2x github "></i></a></div>
-        <!-- Blog -->
+        Blog
          <div class="social-circle social-
         logos"><a id="white" href="https://praveenrajsl.hashnode.dev/"><i class="fa-brands fa-hashnode fa-2x "></i></a></div>
         </div>
         </div>
       </section>
     </main>
-    <!-- Footer -->
-      <footer>
+    Footer
+     <footer>
         <div class="footer-contents container">
           <img src="./Images/nav-icon.png" alt="footer-logo">
           <h2>Designed & Built by Praveen Raj</h2>
           <h2 class="footer-date" style="color: aliceblue;">&copy; 2023 Praveen Raj. All rights reserved</h2>
         </div>    
       </footer>
-    <script src="./script.js"></script>
+    <script src="./script.js"></script> -->
+    <div class="img-box">
+      <img class="img" src="./Images/empty-list.svg" alt="">
+    </div>
+    <div class="msg-box">
+      <h1 class="msg">Oops, website is currently <span class="blue">under development :/</span> </h1>
+    </div>
+
   </body>
 </html>
